# hpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  debug.sh  install_deps_trusty_sudo.sh  install_deps_xenial.sh  install_deps_xenial_sudo.sh  release.sh  testAll.sh
cases/: .gitignore  CMakeLists.txt  batch.py  generateDatabases.py  spectralSolveCUDA.py
cases/image_processing/: stack_images_vertical.sh
cases/literature/: README.md  mihaila2014_plane_strain_compression_spectral_8192.csv  mihaila2014_psc_iterative.csv  mihaila2014_psc_spectral_1024.csv  mihaila2014_sh_iterative.csv  mihaila2014_sh_spectral_1024.csv  mihaila2014_sh_spectral_8192.csv  savage2015_plane_strain_compression_iterative.csv  savage2015_plane_strain_compression_spectral_2048.csv
cmake/: HPPConfig.cmake.in
cmake/Modules/: FindEigen.cmake  FindFFTW.cmake  FindGPUS.cmake  FindPythonExtras.cmake  FindSSE.cmake  FindTCLAP.cmake  HPPCommon.cmake  OptimizeForArchitecture.cmake
config/: .gitignore  debug.in
doc/: .gitignore  Doxyfile  examples.md  generate.sh  install.md  mainpage.md  py_filter
include/hpp/: .gitignore  casesUtils.h  config.h  config.h.in  continuum.h  crystal.h  crystalCUDA.h  cudaUtils.h  gsh.h  gshCUDA.h  hdfUtils.h  hdfUtilsCpp.h  mpiUtils.h  profUtils.h  python.h  rotation.h  simdUtils.h  spectralUtils.h  spectralUtilsCUDA.h  stdlibReplacements.h  tensor.h  tensorCUDA.h
scripts/: debug.sh  install_deps_mandatory_xenial.sh  install_deps_mandatory_xenial_sudo.sh  install_deps_recommended_xenial.sh  install_deps_recommended_xenial_sudo.sh  install_deps_trusty_sudo.sh  install_deps_xenial.sh  install_deps_xenial_sudo.sh  mandatory_pkglist_xenial.txt  recommended_pkglist_xenial.txt  testAll.sh
src/: .gitignore  CMakeLists.txt  analysisUtils.py  casesUtils.cpp  continuum.py  crystal.cpp  crystal.cu  crystal.py  cudaUtils.cu  hdfUtils.cpp  kalidindi1992.py  linearAlgebra.py  mihaila2014.py  mpiUtils.cpp  plotting.py  profUtils.cpp  profUtils.py  python.cpp  python.cu  python_common.cpp  rotation.cpp  runUtils.py  spectralUtils.cpp  spectralUtils.cu  tensor.cpp  tensor.cu
src/tools/: CMakeLists.txt  evaluateCompressionError.cpp  generateRawDatabase.cpp  generateSpectralDatabase.cpp  iterativeSolve.cpp  spectralSolve.cpp  spectralSolveCUDA.cu  spectralSolveGSHCUDA.cu
test/: .gitignore  CMakeLists.txt
test/continuum/: CMakeLists.txt  testContinuum.cpp
test/crystal/: CMakeLists.txt  testCrystal.cpp  testCrystal.cu  testCrystal.py
test/fftw/: CMakeLists.txt  testFFTWParallel.cpp  testFFTWSerial.cpp
test/gsh/: CMakeLists.txt  testGSH.cu
test/hdfUtils/: CMakeLists.txt  testHDFUtilsParallel.cpp
test/kalidindi1992/: kalidindi1992_redo_step.py  kalidindi1992_test.py
test/linearAlgebra/: linearAlgebra_test.py
test/mpiUtils/: CMakeLists.txt  testMPIUtils.cpp
test/rotation/: CMakeLists.txt  testRotation.cpp
test/spectralUtils/: CMakeLists.txt  testSpectralUtils.cpp  testSpectralUtilsCUDA.cu
test/tensor/: CMakeLists.txt  readHDF5.py  testTensor.cpp  testTensor2.cpp  testTensor2Parallel.cpp  testTensor4.cpp
travis/: debug.sh  release.sh
