# MPI utils tests
add_subdirectory(mpiUtils)

# HDF utils tests
add_subdirectory(hdfUtils)

# FFTW tests
add_subdirectory(fftw)

# Tensor tests
add_subdirectory(tensor)

# Crystal tests
add_subdirectory(crystal)

# Continuum tests
add_subdirectory(continuum)

# Spectral utils tests
add_subdirectory(spectralUtils)
